# plutus-code

./: .gitignore  README.md  cabal.project  plutus-code.cabal
Basics/: plutus-code-basics.cabal
Basics/src/: ContractMonad.hs  DataModule.hs  HandlingTime.hs  HandlingValue.hs
Beneficiary/: plutus-code-beneficiary.cabal
Beneficiary/src/: Emulator.hs  OffChain.hs  OnChain.hs
Crowdfunding/: plutus-code-crowdfunding.cabal
Crowdfunding/src/: Crowdfunding.hs  OnChain.hs
Free/: plutus-code-free.cabal
Free/src/: Emulator.hs  OffChain.hs  OnChain.hs
Guess/: plutus-code-guess.cabal
Guess/src/: Emulator.hs  OffChain.hs  OnChain.hs
Helper/: plutus-code-helper.cabal
Helper/src/: Compiler.hs  Deploy.hs
MintBurn/: plutus-code-mint-burn.cabal
MintBurn/src/: Deploy.hs  Emulator.hs  OffChain.hs  OnChain.hs
NFT/: plutus-code-nft.cabal
NFT/src/: Emulator.hs  OffChain.hs  OnChain.hs
Parameterized/: plutus-code-parameterized.cabal
Parameterized/src/Parameterized/: Emulator.hs  OffChain.hs  OnChain.hs
Parameterized/testnet/parameterized-tx/: README.md  paramDatum.json  produce.sh  tx2.signed
PlutusPioneerProgram/Week02/: plutus-code-ppp-week02.cabal
PlutusPioneerProgram/Week02/src/: Burn.hs  FortyTwo.hs  Gift.hs  Homework1.hs  Homework2.hs  IsData.hs
PlutusPioneerProgram/Week06/: plutus-code-ppp-week06.cabal
PlutusPioneerProgram/Week06/app/: token-name.hs  token-policy.hs
PlutusPioneerProgram/Week06/src/: Emulator.hs  OffChain.hs  OnChain.hs  Utils.hs
PlutusPioneerProgram/Week06/testnet/: mint-token-cli.sh  token.plutus  tx.unsigned
PlutusPioneerProgram/Week07/: plutus-code-ppp-week07.cabal
PlutusPioneerProgram/Week07/src/EvenOdd/: Emulator.hs  OffChain.hs  OnChain.hs
PlutusPioneerProgram/Week07/src/StateMachine/: OnChain.hs
PlutusPioneerProgram/Week08/: plutus-code-ppp-week08.cabal
PlutusPioneerProgram/Week08/src/: Emulator.hs  OffChain.hs  OnChain.hs
PlutusPioneerProgram/Week08/test/: Spec.hs
PlutusPioneerProgram/Week08/test/Spec/: Trace.hs
Signed/: plutus-code-signed.cabal
Signed/src/: Emulator.hs  OffChain.hs  OnChain.hs
Simple/: plutus-code-simple.cabal
Simple/src/Simple/: OnChain.hs
TwoBeneficiaries/: plutus-code-two-beneficiaries.cabal
TwoBeneficiaries/src/: Emulator.hs  OffChain.hs  OnChain.hs
Vesting/: plutus-code-vesting.cabal
Vesting/src/Vesting/: Emulator.hs  OffChain.hs  OnChain.hs
Vesting/testnet/vesting-tx/: produce.sh  vesting.addr  vesting.plutus
app/: token-name.hs  token-policy.hs
src/: ContractMonad.hs  DataModule.hs  HandlingTime.hs  MyModule.hs  Utils.hs
src/Basics/: ContractMonad.hs  DataModule.hs  HandlingTime.hs  HandlingValue.hs  MyModule.hs
src/Beneficiary/: Emulator.hs  OffChain.hs  OnChain.hs
src/CrowdFunding/: OnChain.hs
src/Free/: Emulator.hs  OffChain.hs  OnChain.hs
src/Guess/: Emulator.hs  OffChain.hs  OnChain.hs
src/Helper/: Compiler.hs  Deploy.hs
src/MintBurn/: Deploy.hs  Emulator.hs  OffChain.hs  OnChain.hs
src/NFT/: Emulator.hs  OffChain.hs  OnChain.hs
src/NFT01/: Emulator.hs  OffChain.hs  OnChain.hs
src/Parameterized/: Emulator.hs  OffChain.hs  OnChain.hs
src/Signed/: Emulator.hs  OffChain.hs  OnChain.hs
src/Simple/: OnChain.hs
src/TwoBeneficiaries/: Emulator.hs  OffChain.hs  OnChain.hs
src/Vesting/: Emulator.hs  OffChain.hs  OnChain.hs
src/Week02/: Burn.hs  FortyTwo.hs  Gift.hs  Homework1.hs  Homework2.hs  IsData.hs
src/Week06/: Emulator.hs  OffChain.hs  OnChain.hs  Utils.hs
src/Week07/: Emulator.hs  EvenOdd.hs  OffChain.hs
src/Week07/EvenOdd/: Emulator.hs  OffChain.hs  OnChain.hs
src/Week07/StateMachine/: OnChain.hs
src/Week08/: Emulator.hs  OffChain.hs  OnChain.hs
test/: Spec.hs
test/Spec/: Trace.hs
testnet/parameterized-tx/: README.md  consume.sh  param.addr  param.plutus  tx.body  tx.signed  tx2.body
testnet/vesting-tx/: README.md  consume.sh  tx.body  tx.signed  tx2.body  tx2.signed  vestingDatum.json
testnet/week06/: tx.signed
