cabal-version:      3.0
name:               plutus-code
version:            0.1.0.0
stability:          experimental

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

license: Apache-2.0
license-files: LICENSE
author:

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

flag defer-plugin-errors
    description:
        Defer errors from the plugin, useful for things like Haddock that can't handle it.
    default: False
    manual: True

common lang
    default-language:   Haskell2010
    ghc-options:
      -Wall -Wnoncanonical-monad-instances
      -Wincomplete-uni-patterns -Wincomplete-record-updates
      -Wredundant-constraints -Widentities -rtsopts
      -- See Plutus Tx readme
      -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    if flag(defer-plugin-errors)
        ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors

library
    import: lang

    exposed-modules:
        Utils,

        -- basic reference
        Basics.ContractMonad,
        Basics.DataModule,
        Basics.HandlingTime,
        Basics.HandlingValue,
        Basics.MyModule,

        -- compile scripts 
        Helper.Compiler,
        Helper.Deploy,

        -- contract examples
        Week02.Gift,
        Week02.Burn,
        Week02.FortyTwo,
        Week02.IsData,

        Beneficiary.OnChain,
        Beneficiary.OffChain,
        Beneficiary.Emulator,

        Parameterized.OnChain,
        Parameterized.OffChain,
        Parameterized.Emulator,

        Guess.OnChain,
        Guess.OffChain,
        Guess.Emulator,

        CrowdFunding.OnChain,

        -- policy scripts, native assets
        Free.OnChain,
        Free.OffChain,
        Free.Emulator,

        Signed.OnChain,
        Signed.OffChain,
        Signed.Emulator,

        NFT01.OnChain,
        NFT01.OffChain,
        NFT01.Emulator,

        Week06.OnChain,
        Week06.Utils,

        -- other examples
        TwoBeneficiaries.OnChain,
        TwoBeneficiaries.OffChain,
        TwoBeneficiaries.Emulator,

        Vesting.OnChain,
        Vesting.OffChain,
        Vesting.Emulator,

        Simple.OnChain

    -- Plutus dependencies
    build-depends:
      playground-common -any,
      plutus-contract -any,
      plutus-ledger -any,
      plutus-ledger-api -any,
      plutus-ledger-constraints -any,
      plutus-tx -any,
      plutus-tx-plugin -any,
      plutus-script-utils -any,
      cardano-api, 
      cardano-binary,
      data-default,

      -- added
      cardano-crypto-class,
      cardano-ledger-core,
      cardano-ledger-shelley,
      cardano-wallet-core

    -- Other dependencies
    build-depends:
      base >= 4.9 && < 5,
      aeson -any,
      bytestring -any,
      containers -any,
      freer-extras -any,
      openapi3,
      text -any,
      lens -any,
      serialise -any,
      base16-bytestring
    hs-source-dirs: src

executable token-policy
    main-is:          token-policy.hs
    hs-source-dirs:   app
    ghc-options:      -Wall
    build-depends:
      base >= 4.9 && < 5,
      plutus-code
    default-language: Haskell2010

