cabal-version:      3.0
name:               plutus-code
version:            0.1.0.0
stability:          experimental

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

license: Apache-2.0
license-files: LICENSE
author:

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

flag defer-plugin-errors
    description:
        Defer errors from the plugin, useful for things like Haddock that can't handle it.
    default: False
    manual: True

common lang
    default-language:   Haskell2010
    ghc-options:
      -Wall -Wnoncanonical-monad-instances
      -Wincomplete-uni-patterns -Wincomplete-record-updates
      -Wredundant-constraints -Widentities -rtsopts
      -- See Plutus Tx readme
      -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    if flag(defer-plugin-errors)
        ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors

library
    import: lang

    exposed-modules:
        Helper.Compiler,
        Helper.Deploy,
    
        Simple.OnChain,

        Beneficiary.OnChain,
        Beneficiary.OffChain,
        Beneficiary.Emulator,

        Guess.OnChain,
        Guess.OffChain,
        Guess.Emulator,

        Vesting.OnChain,
        Vesting.OffChain,
        Vesting.Emulator,

        Parameterized.OnChain,
        Parameterized.OffChain,
        Parameterized.Emulator,

        TwoBeneficiaries.OnChain,
        TwoBeneficiaries.OffChain,
        TwoBeneficiaries.Emulator,

        --CrowdFunding.OnChain,
      
        -- Minting Native Assets
        NFT.OnChain,
        NFT.OffChain,
        NFT.Emulator,

        Free.OnChain,
        Free.OffChain,
        Free.Emulator,

        Signed.OnChain,
        Signed.OffChain,
        Signed.Emulator,

        MintBurn.OnChain,

        -- Plutus Pioneer Program
        Week02.Burn,
        Week02.FortyTwo,
        Week02.Gift,
        Week02.Homework1,
        Week02.Homework2,
        Week02.IsData,

        Week06.OnChain,
        Week06.OffChain,
        Week06.Emulator,
        Week06.Utils,

        Week07.EvenOdd.OnChain,
        Week07.EvenOdd.OffChain,
        Week07.EvenOdd.Emulator,

        -- Token Sale
        Week08.OnChain,
        Week08.OffChain,
        Week08.Emulator,

        -- Basics
        Basics.ContractMonad,
        Basics.DataModule,
        Basics.HandlingTime,
        Basics.HandlingValue,
        Basics.MyModule,
        Utils

    -- Plutus dependencies
    build-depends:
      playground-common -any,
      plutus-contract -any,
      plutus-chain-index-core -any,
      plutus-ledger -any,
      plutus-ledger-api -any,
      plutus-ledger-constraints -any,
      plutus-tx -any,
      plutus-tx-plugin -any,
      plutus-script-utils -any,
      cardano-api, 
      cardano-binary,
      data-default,

      -- added
      cardano-crypto-class,
      cardano-ledger-core,
      cardano-ledger-shelley,
      cardano-wallet-core

    -- Other dependencies
    build-depends:
      base >= 4.9 && < 5,
      aeson -any,
      bytestring -any,
      containers -any,
      freer-extras -any,
      openapi3,
      text -any,
      lens -any,
      serialise -any,
      base16-bytestring
    hs-source-dirs: src

test-suite token-sale-tests
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    hs-source-dirs:   test
    other-modules:    Spec.Trace
                    , Spec.Model
    default-language: Haskell2010
    ghc-options: -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    build-depends:
      base >= 4.9 && < 5,
      containers,
      data-default,
      freer-extras,
      lens,
      plutus-code,
      plutus-contract,
      plutus-ledger,
      plutus-tx,
      QuickCheck,
      tasty,
      tasty-hunit,
      tasty-quickcheck,
      text
    if !(impl(ghcjs) || os(ghcjs))
      build-depends: plutus-tx-plugin -any
    
executable token-policy
    main-is:          token-policy.hs
    hs-source-dirs:   app
    ghc-options:      -Wall
    build-depends:
      base >= 4.9 && < 5,
      plutus-code
    default-language: Haskell2010

executable token-name
    main-is:          token-name.hs
    hs-source-dirs:   app
    ghc-options:      -Wall
    build-depends:
      base >= 4.9 && < 5,
      plutus-code
    default-language: Haskell2010
